--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,12 +4,12 @@ triggers {
   pollSCM "* * * * *"
   }
 stages {
-  stage(Build) {
+  stage("Build") {
     steps {
       echo "We build here"
       }
     }
-   stage(Unit Test) {
+   stage("Unit Test") {
     steps {
       echo "We unit test here"
     }
