--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ stages {
     }
    stage("Create Docker Image") {
     steps {
-      echo "We create Docker image and publish"
+      echo "We create Docker image and publish to Google"
       }
      }
    }
